Changes for 1.6
* Deleted "GivesPUsDelegate". (veqryn)

* Finished airborne movement delegate, and technology. (veqryn)

* Created new techAbilityAttachment, "airborneBases", which turns on the new airborne tech. (veqryn)

* Created new techAbilityAttachment, "airborneDistance", which turns on the new airborne tech. (veqryn)

* Created new techAbilityAttachment, "airborneTypes", which turns on the new airborne tech. (veqryn)

* Created new techAbilityAttachment, "airborneCapacity", which turns on the new airborne tech. (veqryn)

* Created new techAbilityAttachment, "airborneForces", which turns on the new airborne tech. (veqryn)

* Created new game option, "Airborne Attacks Only In Enemy Territories", to help control different behavior for airborne tech. (veqryn)

* Created new game option, "Airborne Attacks Only In Existing Battles", to help control different behavior for airborne tech. (veqryn)

* Created Validation for Airborne movement. (veqryn)

* Created AbstractMoveDelegate and abstracted MoveDelegate into it.  Created SpecialMoveDelegate to extend it, for use with new Paratroopers/Airborne tech. (veqryn)

* Fixed error preventing AI Flat Income Bonus from happening unless the Percentage Bonus was also set. (veqryn)

* Fixed repair panel to correctly set the max for each unit. (veqryn)

* Fixed error with displaying discounts for repairing. Also fixed that you may not be able to repair with all your money if you had a discount. (veqryn)

* Fixed null pointer error from having Edit Mode on while AA guns fire. (veqryn)

* Started coding for new paratrooper tech, to be called Airborne Forces. (veqryn)

* Fixed blockade zones so that they never do more damage than the combined total of their neighboring territories, even if there are multiple sea zones blockading a single or set of territories. (veqryn)

* Allowed createsResourcesList to have negative values as well as positive values. (veqryn)
