@@ -1,1 +1,1 @@
-triplea.version=1_5_2_1
+triplea.version=1_6_0_0
