@@ -26,5 +26,5 @@ import games.strategy.util.Version;
  */
 public class EngineVersion
 {
-	public static final Version VERSION = new Version(1, 5, 2, 1);
+	public static final Version VERSION = new Version(1, 6, 0, 0);
 }
